--- a/pwa/manifest.json
+++ b/pwa/manifest.json
@@ -9,7 +9,7 @@
       "type": "image/png"
     }
   ],
-  "start_url": "/index.html",
+  "start_url": "../index.html",
   "scope": "/",
  "display": "fullscreen", 
   "orientation": "portrait",
