--- a/pwa/manifest.json
+++ b/pwa/manifest.json
@@ -4,17 +4,19 @@
   "description": "Crimson - LE site de streaming",
   "icons": [
     {
-      "src": "/img/logo-mobile.png",
+      "src": "../img/logo-mobile.png",
       "sizes": "500x500",
       "type": "image/png"
     }
   ],
   "start_url": "../index.html",
   "scope": "/",
- "display": "fullscreen", 
+  "display": "standalone",
   "orientation": "portrait",
-  "background_color": "#ffffff",
+  "background_color": "#0d071e",
   "theme_color": "#b81b0e",
   "lang": "fr",
-  "categories": ["video", "streaming"]
+  "categories": ["video", "streaming"],
+  "related_applications": [],
+  "prefer_related_applications": false
 }
